Added/Updated tests and added docker file