@@ -30,7 +30,7 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.15'
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 	implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
-	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+	testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.9.3'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java:5.1.47'
@@ -49,6 +49,7 @@ flyway {
 	]
 }
 
-tasks.named('test') {
+test {
+	jvmArgs '--enable-preview'
 	useJUnitPlatform()
 }
